--- a/index.html
+++ b/index.html
@@ -2,49 +2,144 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Crypto Volume Trends</title>
+  <title>Crypto Volume Monitor</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
-  <h2>Crypto Volume Trends</h2>
-  <canvas id="volumeChart"></canvas>
+<body class="bg-gray-900 text-white p-6">
+  <h1 class="text-3xl font-bold mb-6">📊 Crypto Volume Monitor</h1>
+  
+  <!-- Table -->
+  <div class="overflow-x-auto">
+    <table class="w-full text-left border-collapse">
+      <thead>
+        <tr class="border-b border-gray-700 text-gray-300">
+          <th class="p-2">Coin</th>
+          <th class="p-2">Price</th>
+          <th class="p-2">24h Volume</th>
+          <th class="p-2">% Δ Volume</th>
+          <th class="p-2">Trend (7d)</th>
+        </tr>
+      </thead>
+      <tbody id="coin-table"></tbody>
+    </table>
+  </div>
+
+  <!-- Detailed Chart -->
+  <div class="mt-8">
+    <h2 class="text-2xl mb-2" id="chartTitle">Click a coin row to see detailed volume</h2>
+    <canvas id="detailChart" class="bg-gray-800 p-4 rounded-lg shadow-md"></canvas>
+  </div>
 
   <script>
-    async function fetchVolumeData(coinId = "bitcoin", days = 7) {
-      const url = `https://api.coingecko.com/api/v3/coins/${coinId}/market_chart?vs_currency=usd&days=${days}`;
-      const response = await fetch(url);
-      const data = await response.json();
-      return data.total_volumes; // [ [timestamp, volume], ... ]
+    async function fetchCoins() {
+      const url = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=volume_desc&per_page=10&page=1&sparkline=false";
+      const res = await fetch(url);
+      return res.json();
     }
 
-    async function renderChart() {
-      const volumes = await fetchVolumeData("bitcoin", 7);
-      const labels = volumes.map(v => new Date(v[0]).toLocaleDateString());
-      const values = volumes.map(v => v[1]);
+    async function fetchVolumeHistory(coinId) {
+      const url = `https://api.coingecko.com/api/v3/coins/${coinId}/market_chart?vs_currency=usd&days=7`;
+      const res = await fetch(url);
+      return res.json();
+    }
 
-      const ctx = document.getElementById("volumeChart").getContext("2d");
-      new Chart(ctx, {
-        type: "line",
-        data: {
-          labels: labels,
-          datasets: [{
-            label: "Volume (USD)",
-            data: values,
-            borderColor: "blue",
-            fill: false,
-            tension: 0.1
-          }]
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: { beginAtZero: false }
+    function formatNumber(num) {
+      return new Intl.NumberFormat("en-US", {notation: "compact"}).format(num);
+    }
+
+    let detailChart;
+
+    async function renderTable() {
+      const coins = await fetchCoins();
+      const table = document.getElementById("coin-table");
+      table.innerHTML = "";
+
+      for (const coin of coins) {
+        // Fetch 7d volume for sparkline
+        const history = await fetchVolumeHistory(coin.id);
+        const volumes = history.total_volumes.map(v => v[1]);
+        const labels = history.total_volumes.map(v => new Date(v[0]).toLocaleDateString());
+
+        const sparkCanvas = document.createElement("canvas");
+        sparkCanvas.width = 100;
+        sparkCanvas.height = 30;
+
+        new Chart(sparkCanvas, {
+          type: "line",
+          data: {
+            labels: labels,
+            datasets: [{
+              data: volumes,
+              borderColor: "cyan",
+              borderWidth: 1,
+              pointRadius: 0,
+              fill: false,
+              tension: 0.2
+            }]
+          },
+          options: {
+            responsive: false,
+            plugins: { legend: { display: false } },
+            scales: {
+              x: { display: false },
+              y: { display: false }
+            }
           }
-        }
-      });
+        });
+
+        const row = document.createElement("tr");
+        row.className = "border-b border-gray-800 hover:bg-gray-800 cursor-pointer";
+        
+        row.innerHTML = `
+          <td class="p-2 flex items-center gap-2">
+            <img src="${coin.image}" class="w-6 h-6"> ${coin.name} (${coin.symbol.toUpperCase()})
+          </td>
+          <td class="p-2">$${coin.current_price.toLocaleString()}</td>
+          <td class="p-2">$${formatNumber(coin.total_volume)}</td>
+          <td class="p-2 ${
+            coin.price_change_percentage_24h > 0 ? "text-green-400" : "text-red-400"
+          }">${coin.price_change_percentage_24h?.toFixed(2) ?? 0}%</td>
+        `;
+
+        // Append sparkline
+        const sparkTd = document.createElement("td");
+        sparkTd.className = "p-2";
+        sparkTd.appendChild(sparkCanvas);
+        row.appendChild(sparkTd);
+
+        // On click → detailed chart
+        row.addEventListener("click", () => {
+          document.getElementById("chartTitle").innerText = `${coin.name} Volume (7d)`;
+          if (detailChart) detailChart.destroy();
+          const ctx = document.getElementById("detailChart").getContext("2d");
+          detailChart = new Chart(ctx, {
+            type: "line",
+            data: {
+              labels: labels,
+              datasets: [{
+                label: "Volume (USD)",
+                data: volumes,
+                borderColor: "cyan",
+                fill: false,
+                tension: 0.2
+              }]
+            },
+            options: {
+              plugins: { legend: { labels: { color: "white" } } },
+              scales: {
+                x: { ticks: { color: "white" } },
+                y: { ticks: { color: "white" } }
+              }
+            }
+          });
+        });
+
+        table.appendChild(row);
+      }
     }
 
-    renderChart();
+    renderTable();
   </script>
 </body>
 </html>
