--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Crypto Volume Monitor</title>
+  <title>Crypto Volume Momentum Monitor</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-900 text-white p-6">
-  <h1 class="text-3xl font-bold mb-6">📊 Crypto Volume Monitor</h1>
+  <h1 class="text-3xl font-bold mb-6">📊 Crypto Volume Momentum Monitor</h1>
   
   <!-- Table -->
   <div class="overflow-x-auto">
@@ -17,7 +17,7 @@
           <th class="p-2">Coin</th>
           <th class="p-2">Price</th>
           <th class="p-2">24h Volume</th>
-          <th class="p-2">% Δ Volume</th>
+          <th class="p-2 text-yellow-400">Volume Δ (24h)</th>
           <th class="p-2">Trend (7d)</th>
         </tr>
       </thead>
@@ -33,13 +33,13 @@
 
   <script>
     async function fetchCoins() {
-      const url = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=volume_desc&per_page=10&page=1&sparkline=false";
+      const url = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=volume_desc&per_page=100&page=1&sparkline=false";
       const res = await fetch(url);
       return res.json();
     }
 
-    async function fetchVolumeHistory(coinId) {
-      const url = `https://api.coingecko.com/api/v3/coins/${coinId}/market_chart?vs_currency=usd&days=7`;
+    async function fetchVolumeHistory(coinId, days=2) {
+      const url = `https://api.coingecko.com/api/v3/coins/${coinId}/market_chart?vs_currency=usd&days=${days}`;
       const res = await fetch(url);
       return res.json();
     }
@@ -56,11 +56,19 @@
       table.innerHTML = "";
 
       for (const coin of coins) {
-        // Fetch 7d volume for sparkline
-        const history = await fetchVolumeHistory(coin.id);
+        // Get 48h of volume for change calc
+        const history = await fetchVolumeHistory(coin.id, 2);
         const volumes = history.total_volumes.map(v => v[1]);
         const labels = history.total_volumes.map(v => new Date(v[0]).toLocaleDateString());
 
+        // Split into two 24h windows
+        const half = Math.floor(volumes.length / 2);
+        const prev24h = volumes.slice(0, half).reduce((a, b) => a + b, 0);
+        const curr24h = volumes.slice(half).reduce((a, b) => a + b, 0);
+
+        let volumeChangePct = ((curr24h - prev24h) / prev24h) * 100;
+
+        // Build sparkline
         const sparkCanvas = document.createElement("canvas");
         sparkCanvas.width = 100;
         sparkCanvas.height = 30;
@@ -88,6 +96,7 @@
           }
         });
 
+        // Table row
         const row = document.createElement("tr");
         row.className = "border-b border-gray-800 hover:bg-gray-800 cursor-pointer";
         
@@ -96,10 +105,10 @@
             <img src="${coin.image}" class="w-6 h-6"> ${coin.name} (${coin.symbol.toUpperCase()})
           </td>
           <td class="p-2">$${coin.current_price.toLocaleString()}</td>
-          <td class="p-2">$${formatNumber(coin.total_volume)}</td>
-          <td class="p-2 ${
-            coin.price_change_percentage_24h > 0 ? "text-green-400" : "text-red-400"
-          }">${coin.price_change_percentage_24h?.toFixed(2) ?? 0}%</td>
+          <td class="p-2">$${formatNumber(curr24h)}</td>
+          <td class="p-2 font-bold ${
+            volumeChangePct > 0 ? "text-green-400" : "text-red-400"
+          }">${volumeChangePct.toFixed(1)}%</td>
         `;
 
         // Append sparkline
@@ -112,26 +121,32 @@
         row.addEventListener("click", () => {
           document.getElementById("chartTitle").innerText = `${coin.name} Volume (7d)`;
           if (detailChart) detailChart.destroy();
-          const ctx = document.getElementById("detailChart").getContext("2d");
-          detailChart = new Chart(ctx, {
-            type: "line",
-            data: {
-              labels: labels,
-              datasets: [{
-                label: "Volume (USD)",
-                data: volumes,
-                borderColor: "cyan",
-                fill: false,
-                tension: 0.2
-              }]
-            },
-            options: {
-              plugins: { legend: { labels: { color: "white" } } },
-              scales: {
-                x: { ticks: { color: "white" } },
-                y: { ticks: { color: "white" } }
+
+          fetchVolumeHistory(coin.id, 7).then(history7d => {
+            const vols7d = history7d.total_volumes.map(v => v[1]);
+            const labels7d = history7d.total_volumes.map(v => new Date(v[0]).toLocaleDateString());
+            const ctx = document.getElementById("detailChart").getContext("2d");
+
+            detailChart = new Chart(ctx, {
+              type: "line",
+              data: {
+                labels: labels7d,
+                datasets: [{
+                  label: "Volume (USD)",
+                  data: vols7d,
+                  borderColor: "cyan",
+                  fill: false,
+                  tension: 0.2
+                }]
+              },
+              options: {
+                plugins: { legend: { labels: { color: "white" } } },
+                scales: {
+                  x: { ticks: { color: "white" } },
+                  y: { ticks: { color: "white" } }
+                }
               }
-            }
+            });
           });
         });
 
