--- a/index.html
+++ b/index.html
@@ -35,13 +35,18 @@
     const proxy = "https://api.allorigins.win/get?url=";
 
     async function fetchJSON(url) {
-      const res = await fetch(proxy + encodeURIComponent(url));
-      const data = await res.json();
-      return JSON.parse(data.contents);
+      try {
+        const res = await fetch(proxy + encodeURIComponent(url));
+        const data = await res.json();
+        return JSON.parse(data.contents);  // AllOrigins wraps data
+      } catch (err) {
+        console.error("Fetch failed for", url, err);
+        return null;
+      }
     }
 
     async function fetchCoins() {
-      const url = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=volume_desc&per_page=20&page=1&sparkline=false";
+      const url = "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=volume_desc&per_page=10&page=1&sparkline=false";
       return fetchJSON(url);
     }
 
@@ -58,23 +63,29 @@
 
     async function renderTable() {
       const coins = await fetchCoins();
+      if (!coins) {
+        document.getElementById("coin-table").innerHTML =
+          `<tr><td colspan="5" class="p-4 text-center text-red-400">⚠️ Failed to load data. Try refreshing.</td></tr>`;
+        return;
+      }
+
       const table = document.getElementById("coin-table");
       table.innerHTML = "";
 
       for (const coin of coins) {
-        // Get 48h of volume for change calc
         const history = await fetchVolumeHistory(coin.id, 2);
+        if (!history || !history.total_volumes) continue;
+
         const volumes = history.total_volumes.map(v => v[1]);
         const labels = history.total_volumes.map(v => new Date(v[0]).toLocaleDateString());
 
-        // Split into two 24h windows
+        // split into two 24h buckets
         const half = Math.floor(volumes.length / 2);
         const prev24h = volumes.slice(0, half).reduce((a, b) => a + b, 0);
         const curr24h = volumes.slice(half).reduce((a, b) => a + b, 0);
+        let volumeChangePct = prev24h > 0 ? ((curr24h - prev24h) / prev24h) * 100 : 0;
 
-        let volumeChangePct = ((curr24h - prev24h) / prev24h) * 100;
-
-        // Build sparkline
+        // sparkline canvas
         const sparkCanvas = document.createElement("canvas");
         sparkCanvas.width = 100;
         sparkCanvas.height = 30;
@@ -95,14 +106,11 @@
           options: {
             responsive: false,
             plugins: { legend: { display: false } },
-            scales: {
-              x: { display: false },
-              y: { display: false }
-            }
+            scales: { x: { display: false }, y: { display: false } }
           }
         });
 
-        // Table row
+        // row
         const row = document.createElement("tr");
         row.className = "border-b border-gray-800 hover:bg-gray-800 cursor-pointer";
         
@@ -117,42 +125,42 @@
           }">${volumeChangePct.toFixed(1)}%</td>
         `;
 
-        // Append sparkline
         const sparkTd = document.createElement("td");
         sparkTd.className = "p-2";
         sparkTd.appendChild(sparkCanvas);
         row.appendChild(sparkTd);
 
-        // On click → detailed chart
-        row.addEventListener("click", () => {
+        // detailed chart on click
+        row.addEventListener("click", async () => {
           document.getElementById("chartTitle").innerText = `${coin.name} Volume (7d)`;
           if (detailChart) detailChart.destroy();
 
-          fetchVolumeHistory(coin.id, 7).then(history7d => {
-            const vols7d = history7d.total_volumes.map(v => v[1]);
-            const labels7d = history7d.total_volumes.map(v => new Date(v[0]).toLocaleDateString());
-            const ctx = document.getElementById("detailChart").getContext("2d");
+          const history7d = await fetchVolumeHistory(coin.id, 7);
+          if (!history7d) return;
 
-            detailChart = new Chart(ctx, {
-              type: "line",
-              data: {
-                labels: labels7d,
-                datasets: [{
-                  label: "Volume (USD)",
-                  data: vols7d,
-                  borderColor: "cyan",
-                  fill: false,
-                  tension: 0.2
-                }]
-              },
-              options: {
-                plugins: { legend: { labels: { color: "white" } } },
-                scales: {
-                  x: { ticks: { color: "white" } },
-                  y: { ticks: { color: "white" } }
-                }
+          const vols7d = history7d.total_volumes.map(v => v[1]);
+          const labels7d = history7d.total_volumes.map(v => new Date(v[0]).toLocaleDateString());
+          const ctx = document.getElementById("detailChart").getContext("2d");
+
+          detailChart = new Chart(ctx, {
+            type: "line",
+            data: {
+              labels: labels7d,
+              datasets: [{
+                label: "Volume (USD)",
+                data: vols7d,
+                borderColor: "cyan",
+                fill: false,
+                tension: 0.2
+              }]
+            },
+            options: {
+              plugins: { legend: { labels: { color: "white" } } },
+              scales: {
+                x: { ticks: { color: "white" } },
+                y: { ticks: { color: "white" } }
               }
-            });
+            }
           });
         });
 
